lab/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sciencelab2019-deployment
  labels:
    app: sciencelab2019
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sciencelab2019
  template:
    metadata:
      labels:
        app: sciencelab2019
    spec:
      containers:
        - name: "sciencelab2019"
          image: "globalazurebootcamp/sciencelab2019:latest"
          imagePullPolicy: Always
