lab/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sciencelab2019-service
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: sciencelab2019
